--- a/public/fonts/icons/demo.html
+++ b/public/fonts/icons/demo.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;14)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;15)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: Unknown</h1>
@@ -189,6 +189,19 @@
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
 				<span class="fonticon-specialty-foodservice-equipment"></span><span class="mls"> fonticon-specialty-foodservice-equipment</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e60e" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe60e;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="fonticon-made-italy5"></span><span class="mls"> fonticon-made-italy5</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e60d" class="unit size1of2" />
